--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -206,7 +206,7 @@
                                             <button type="button" class="mb-3 btn btn-primary" data-bs-toggle="modal" data-bs-target="#add-deliverable-modal">
 
                                                 <i class="fa-solid fa-plus"></i>
-                                                Add deliverable
+                                                
                                             </button>
                                         </div>
                                         <div
@@ -220,7 +220,7 @@
                                             <button type="button" class="mb-3 btn btn-primary" data-bs-toggle="modal" data-bs-target="#add-architecture-modal">
 
                                                 <i class="fa-solid fa-plus"></i>
-                                                Add architecture
+                                                
                                             </button>
                                         </div>
                                         
@@ -474,8 +474,11 @@
                     <h2 class="card-title display-6 fw-bold" style="text-align: center;" id="pm-task-title">
                     </h2>
                     <!-- d-none that would be hidden and later on will be shown -->
-                    <input type="text" id="pm-task-title-input" class="d-none">
-                    <span class='ms-3 rounded-2 p-2 text-white' id="pm-status"></span>
+                    
+                        <input type="text" id="pm-task-title-input" class="d-none form-control">
+                        
+                    
+                    <span class='ms-3  rounded-2 p-2 text-white' id="pm-status"></span>
 
                     <button type="button" class="btn-close btn-close-task-details" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
