--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -73,60 +73,65 @@
 
                 <div>
 
-                <button class="btn btn-info" id="reset-btn" style="color: #ffffff !important;">
+                    <button class="btn btn-info" id="reset-btn" style="color: #ffffff !important;">
                     reset
-                </button>
+                    </button>
 
-                <div class="d-inline-block">
-                <div class="d-inline-block">
-                    <select id="status-filter" class="form-control">
-                        <option value="" selected disabled>Status</option>
-                        <option value="PENDING">PENDING</option>
-                        <option value="APPROVE">APPROVE</option>
-                        <option value="DECLINE">DECLINE</option>
-                        <option value="DUPLICATE">DUPLICATE</option>
-                    </select>
-                </div>
-                <div class="d-inline-block">
-                    <select id="solved-filter" class="form-control">
-                        <option value="" selected disabled>Choose</option>
-                        <option value="1">Solved</option>
-                        <option value="0">Unsolved</option>
-                    </select>
-                </div>
-                <div class="d-inline-block">
-                    <select id="category-filter" class="form-control">
-                        <option value="" selected disabled>Category</option>
-                        <option value="ERROR">ERROR</option>
-                        <option value="BUG">BUG</option>
-                        <option value="COMMUNICATION">COMMUNICATION</option>
-                        <option value="TECHNICAL">TECHNICAL</option>
-                        <option value="BUDGET">BUDGET</option>
-                        <option value="DESIGN">DESIGN</option>
-                        <option value="TESTING">TESTING</option>
-                        <option value="OTHER">OTHER</option>
-                    </select>
-                </div>
-                <form class="d-inline-block">
-                    <input
-                            class="form-control border-0"
-                            type="search"
-                            placeholder="Search issue"
-                    />
-                </form>
-                <!-- modal toggle button start -->
-                <button type="button" class="btn d-none btn-light align-self-start" data-bs-toggle="modal"
-                        data-bs-target="#add-issue">
-                    <i class="bi bi-plus-lg"></i>
-                </button>
-                <!-- modal toggle button end -->
-                <!-- sortting button -->
-                <i class="bi bi-sort-alpha-down sort-btn text-dark"></i>
+                    <div class="d-inline-block">
+                        <div class="d-inline-block">
+                            <select id="status-filter" class="form-control">
+                                <option value="" selected disabled>Status</option>
+                                <option value="PENDING">PENDING</option>
+                                <option value="APPROVE">APPROVE</option>
+                                <option value="DECLINE">DECLINE</option>
+                                <option value="DUPLICATE">DUPLICATE</option>
+                            </select>
+                        </div>
+                        <div class="d-inline-block">
+                            <select id="solved-filter" class="form-control">
+                                <option value="" selected disabled>Choose</option>
+                                <option value="1">Solved</option>
+                                <option value="0">Unsolved</option>
+                            </select>
+                        </div>
+                        <div class="d-inline-block">
+                            <select id="category-filter" class="form-control">
+                                <option value="" selected disabled>Category</option>
+                                <option value="ERROR">ERROR</option>
+                                <option value="BUG">BUG</option>
+                                <option value="COMMUNICATION">COMMUNICATION</option>
+                                <option value="TECHNICAL">TECHNICAL</option>
+                                <option value="BUDGET">BUDGET</option>
+                                <option value="DESIGN">DESIGN</option>
+                                <option value="TESTING">TESTING</option>
+                                <option value="OTHER">OTHER</option>
+                            </select>
+                        </div>
+                        
+                    <!-- modal toggle button start -->
+                        <button type="button" class="btn d-none btn-light align-self-start" data-bs-toggle="modal"
+                                data-bs-target="#add-issue">
+                            <i class="bi bi-plus-lg"></i>
+                        </button>
+                    <!-- modal toggle button end -->
+                    <!-- sortting button -->
+                        <i class="bi bi-sort-alpha-down sort-btn text-dark"></i>
 
-                </div>
+                    </div>
                 </div>
                 <!-- Modal -->
+                
             </div>
+            <div class="mt-2">
+                <form class="">
+                    <input
+                        class="form-control border-0"
+                        type="search"
+                        placeholder="Search issue"
+                    />
+                </form>
+            </div>
+            
 
         <div class="container-fluid mt-2">
             <ul class="nav nav-tabs nav-tabs-bordered d-none" id="issue-link">
