--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -332,6 +332,7 @@
     });
     function exportAllRows() {
         const docDefinition = {
+            pageOrientation: "landscape",
             content: [
                 {
                     text: "All Employees",
@@ -374,6 +375,7 @@
 
     function exportSelectedRows(selectedRows) {
         const docDefinition = {
+            pageOrientation: "landscape",
             content: [
                 {
                     text: "Selected Employees",
