--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2320,6 +2320,7 @@
                 try {
                     const allProjects = await getAllProjectInfo()
                     const docDefinition = {
+                        pageOrientation: 'landscape',
                         content: [
                             {
                                 text: 'Project List',
@@ -2372,6 +2373,7 @@
                 try {
                     const selectedRows = await getAllSelectedProjectInfo()
                     const docDefinition = {
+                        pageOrientation: 'landscape',
                         content: [
                             {
                                 text: 'Project List',
