--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -97,14 +97,18 @@
                         <div class="d-inline-block">
                             <select id="category-filter" class="form-control">
                                 <option value="" selected disabled>Category</option>
-                                <option value="ERROR">ERROR</option>
-                                <option value="BUG">BUG</option>
-                                <option value="COMMUNICATION">COMMUNICATION</option>
-                                <option value="TECHNICAL">TECHNICAL</option>
-                                <option value="BUDGET">BUDGET</option>
-                                <option value="DESIGN">DESIGN</option>
-                                <option value="TESTING">TESTING</option>
-                                <option value="OTHER">OTHER</option>
+                                <option value="" disabled selected>Select Issue Category</option>
+                                <option value="ERROR">Error</option>
+                                <option value="BUG">Bug</option>
+                                <option value="COMMUNICATION">Communication</option>
+                                <option value="TECHNICAL">Technical</option>
+                                <option value="BUDGET">Budget</option>
+                                <option value="DESIGN">Design</option>
+                                <option value="TESTING">Testing</option>
+                                <option value="SCHEDULE_DELAYS">Schedule Delays</option>
+                                <option value="DOCUMENTATION">Documentation</option>
+                                <option value="SECURITY">Security</option>
+                                <option value="OTHER">Other</option>
                             </select>
                         </div>
                         
