client info ui repair

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -3698,37 +3698,27 @@
                             >
                                 <div class="row">
                                     <div
-                                        class="fs-2 text-center"
+
                                         id="my-dear-customer-name"
                                     >
                                         DAT
                                     </div>
                                     <div class="row row-cols-1">
                                         <div
-                                            class="d-flex justify-content-center align-items-center gap-2"
+                                            class="d-flex  gap-2"
                                         >
+
                                             <div
-                                                class="p-2 d-inline-block justify-content-center align-items-center rounded-circle bg-primary fs-5 text-white"
-                                            >
-                                                <i class="bi bi-telephone"></i>
-                                            </div>
-                                            <div
-                                                class="align-self-center"
                                                 id="client-phone-contect"
                                             >
                                                 09 77558822
                                             </div>
                                         </div>
                                         <div
-                                            class="d-flex justify-content-center align-items-center gap-2"
+                                            class="d-flex gap-2"
                                         >
+
                                             <div
-                                                class="p-2 d-inline-block justify-content-center align-items-center rounded-circle bg-primary fs-5 text-white"
-                                            >
-                                                <i class="bi bi-envelope-at"></i>
-                                            </div>
-                                            <div
-                                                class="align-self-center"
                                                 id="client-email-address"
                                             >
                                                 suckmyfingure@gmail.com
