client info ui repair done

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -3696,29 +3696,51 @@
                                 class="tab-pane fade profile-edit pb-3"
                                 id="client-info"
                             >
+                                <div class="container-fluid">
                                 <div class="row">
-                                    <div
+                                    <div><h4 class="d-flex justify-content-center mt-2">Client Information</h4></div>
 
-                                        id="my-dear-customer-name"
-                                    >
-                                        DAT
-                                    </div>
                                     <div class="row row-cols-1">
                                         <div
-                                            class="d-flex  gap-2"
+                                                class="d-flex  align-items-center gap-2"
                                         >
-
                                             <div
+                                                    class="p-2 d-inline-block fs-5 text-primary"
+                                            >
+                                                <i class="fa-regular fa-user"></i>
+                                            </div>
+                                            <div
+                                                    class=""
+                                                    id="my-dear-customer-name"
+                                            >
+                                                09 77558822
+                                            </div>
+                                        </div>
+                                        <div
+                                            class="d-flex gap-2 align-items-center"
+                                        >
+                                            <div
+                                                class="p-2 d-inline-block  fs-5 text-primary"
+                                            >
+                                                <i class="bi bi-telephone"></i>
+                                            </div>
+                                            <div
+                                                class=""
                                                 id="client-phone-contect"
                                             >
                                                 09 77558822
                                             </div>
                                         </div>
                                         <div
-                                            class="d-flex gap-2"
+                                            class="d-flex gap-2 align-items-center"
                                         >
-
                                             <div
+                                                class="p-2 d-inline-block  fs-5 text-primary"
+                                            >
+                                                <i class="bi bi-envelope-at"></i>
+                                            </div>
+                                            <div
+                                                class=""
                                                 id="client-email-address"
                                             >
                                                 suckmyfingure@gmail.com
@@ -3727,7 +3749,7 @@
                                     </div>
                                 </div>
                             </div>
-
+                            </div>
                         </div>
                     </div>
                 </div>
